<!--
  ~ Copyright 2020 Laszlo Balazs-Csiki and Contributors
  ~
  ~ This file is part of Pixelitor. Pixelitor is free software: you
  ~ can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License, version 3 as published by the Free
  ~ Software Foundation.
  ~
  ~ Pixelitor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Pixelitor. If not, see <http://www.gnu.org/licenses/>.
  -->

<!-- Tested with Maven version 3.6.3 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>pixelitor</groupId>
    <artifactId>Pixelitor</artifactId>
    <packaging>jar</packaging>
    <version>4.2.3</version>
    <name>pixelitor</name>
    <url>http://pixelitor.sourceforge.net</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:deprecation</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>org.swinglabs.swingx:swingx-all</artifact>
                                    <excludes>
                                        <!-- Pixelitor has its own modified version for these -->
                                        <exclude>org/jdesktop/swingx/graphics/BlendComposite*</exclude>
                                        <exclude>org/jdesktop/swingx/painter/AbstractPainter*</exclude>
                                        <exclude>org/jdesktop/swingx/painter/AbstractLayoutPainter*</exclude>
                                        <exclude>org/jdesktop/swingx/painter/TextPainter*</exclude>
                                        <exclude>org/jdesktop/swingx/painter/effects/**</exclude>
                                        <exclude>org/jdesktop/swingx/JXTipOfTheDay*</exclude>
                                        <exclude>org/jdesktop/swingx/plaf/basic/BasicTipOfTheDayUI*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <minimizeJar>true</minimizeJar>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>pixelitor.Pixelitor</mainClass>
                        </manifest>
                        <manifestEntries>
                            <SplashScreen-Image>images/splash.png</SplashScreen-Image>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.drewnoakes</groupId>
            <artifactId>metadata-extractor</artifactId>
            <version>2.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.swinglabs.swingx</groupId>
            <artifactId>swingx-all</artifactId>
            <version>1.6.5-1</version>
        </dependency>

        <dependency>
            <groupId>net.jafama</groupId>
            <artifactId>jafama</artifactId>
            <version>2.3.1</version>
        </dependency>

        <!--from here test dependencies-->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.2.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-swing-junit</artifactId>
            <version>3.9.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
